[gd_scene load_steps=13 format=3 uid="uid://cuvtvcte3u2kx"]

[ext_resource type="Script" uid="uid://wmpvayxqta4u" path="res://scripts/win.gd" id="1"]
[ext_resource type="FontFile" uid="uid://c14812ee1qjnt" path="res://fonts/born2bsporty-fs.regular.otf" id="1_826fv"]
[ext_resource type="AudioStream" uid="uid://d0kg5gnn2tpud" path="res://assets/sprite/click.wav" id="3_iiocm"]
[ext_resource type="PackedScene" uid="uid://10863sf4s52j" path="res://scenes/trano.tscn" id="3_yxbqr"]

[sub_resource type="Theme" id="Theme_iiocm"]
default_font = ExtResource("1_826fv")
default_font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_yxbqr"]
font_size = 100
font_color = Color(0, 0.697872, 0.518511, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tylv2"]
font_size = 30
font_color = Color(0.144063, 0.144063, 0.144063, 1)

[sub_resource type="Theme" id="Theme_yxbqr"]
default_font = ExtResource("1_826fv")
default_font_size = 20

[sub_resource type="StyleBoxFlat" id="SB_Btn_Focus"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.114897, 0.114897, 0.114897, 0.6)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.8, 0.6, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="SB_Btn_Hover"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.113725, 0.113725, 0.113725, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="SB_Btn_Pressed"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.113725, 0.113725, 0.113725, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="SB_Btn_Normal"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.113725, 0.113725, 0.113725, 0.6)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Win" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_iiocm")
script = ExtResource("1")

[node name="StaticBody2D" parent="." instance=ExtResource("3_yxbqr")]
visible = false
position = Vector2(602, 353)

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.360784, 0.160784, 0.0392157, 0.611765)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.5
offset_top = -298.0
offset_right = 465.5
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.584314, 0.290196, 0.317647, 0.803922)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Title" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 28
text = "Victoire !"
label_settings = SubResource("LabelSettings_yxbqr")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsTitle" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Historique des parties"
label_settings = SubResource("LabelSettings_tylv2")
horizontal_alignment = 1

[node name="StatsCenter" type="CenterContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Scroll" type="ScrollContainer" parent="ColorRect/VBoxContainer/StatsCenter"]
custom_minimum_size = Vector2(900, 360)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
horizontal_scroll_mode = 0

[node name="Content" type="VBoxContainer" parent="ColorRect/VBoxContainer/StatsCenter/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = SubResource("Theme_yxbqr")
theme_override_constants/separation = 8

[node name="Buttons" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_constants/separation = 12
alignment = 1

[node name="Retry" type="Button" parent="ColorRect/VBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("SB_Btn_Focus")
theme_override_styles/hover = SubResource("SB_Btn_Hover")
theme_override_styles/pressed = SubResource("SB_Btn_Pressed")
theme_override_styles/normal = SubResource("SB_Btn_Normal")
text = "Rejouer"

[node name="Menu" type="Button" parent="ColorRect/VBoxContainer/Buttons"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("SB_Btn_Focus")
theme_override_styles/hover = SubResource("SB_Btn_Hover")
theme_override_styles/pressed = SubResource("SB_Btn_Pressed")
theme_override_styles/normal = SubResource("SB_Btn_Normal")
text = "Menu"

[node name="click" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("3_iiocm")
bus = &"pl_btn"

[connection signal="pressed" from="ColorRect/VBoxContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Buttons/Menu" to="." method="_on_menu_pressed"]
